Fixed scrollbar and BrowserRouter -> HashRouter

--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,16 @@
         transition-all duration-100 scale-0 origin-left;
     }
 
+    @layer utilities {
+        /* Chrome, Safari and Opera */
+        .no-scrollbar::-webkit-scrollbar {
+          display: none;
+        }
+    
+        .no-scrollbar {
+          -ms-overflow-style: none; /* IE and Edge */
+          scrollbar-width: none; /* Firefox */
+        }
+    }
+
 }
